--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^6.0.5"
   },
   "devDependencies": {
